# vimints

./: CMakeLists.txt  README.md  build.bat  how_to_vim.md
include/: command.h  editor.h  ui.h  ui_ncurses.h  utils.h
src/: command.cpp  editor.cpp  main.cpp  ui.cpp  ui_ncurses.cpp  utils.cpp
